Added the required tags

--- a/Web_Application_Technologies_and_Django/Assignments/Week_3/HyperText_Markup_Language/site/dj4e.htm
+++ b/Web_Application_Technologies_and_Django/Assignments/Week_3/HyperText_Markup_Language/site/dj4e.htm
@@ -1,21 +1,24 @@
 <!DOCTYPE HTML>
-    <html>
+<html lang="en">
 <head>
    <title>This is me trying to be cool 9377e9 </title>
     <meta charset="UTF-8">
 </head>
 <body>
+<div><h3>testing div</h3></div>
 <h1>NEhAaahaha <strong><em>WELCOME</em></strong></h1>
-</body>
-<p>We know why you are here
-<a href="https:www.google.com">GOOGLE</a> Time
-</p>
-<pre>This is as is and is kinda awesome</pre>
+<p>We know why you are here <a href="https://www.google.com">GOOGLE</a> Time </p>
+<pre>This is as is and is awesome</pre>
 <ol>
     <li> it is me </li>
     <li><p> one more for funzies</p></li>
     <li><pre>This is another one of the cool</pre></li>
 </ol>
+<ul>
+    <li><a href="/polls"> polls</a> </li>
+    <li><span><a href="/admin"> admin</a> </span></li>
+</ul>
 <p>This is how and image would look like </p>
-<img src="../assets/images/pepe.png">
+<img src="../assets/images/pepe.png" alt="pepe">
+</body>
 </html>
